<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/email"
        android:textColor="#010417"
        android:textStyle="bold|italic"/>


    <Button
        android:id="@+id/btnsignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00B0FF"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="75dp"
        android:text="@string/signin"
        android:onClick="SignIn"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00B0FF"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="75dp"
        android:text="@string/cancel"
        android:textStyle="bold|italic" />


</LinearLayout>